<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="100dp"
    android:layout_marginRight="100dp"
    android:orientation="horizontal"
    android:gravity="center">

    <Button
        android:id="@+id/place_select_rtn_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_alignParentLeft="true"
        android:text="@string/back"/>

    <Button
        android:id="@+id/place_select_sure_date_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/sureDate"/>

    <Button
        android:id="@+id/place_select_next_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignParentRight="true"
        android:text="@string/next"/>


</RelativeLayout>