<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="jp.co.ivis.pockettravel.DiyRouteActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/diyMode"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/travetDays"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/diy_days_edit"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="#AFEEEE"
            android:inputType="number"
            android:numeric="integer"
            android:maxLength="1"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp">

        <Button
            android:id="@+id/diy_route_rtn_btn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:text="@string/back"/>

        <Button
            android:id="@+id/diy_route_next_btn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:text="@string/next"/>

    </RelativeLayout>

</LinearLayout>
