<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="jp.co.ivis.pockettravel.RecommendRouteDetailsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/recommendDetails"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <ListView
        android:id="@+id/recommend_details_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
        android:scrollbars="none"
        android:divider="@null">

    </ListView>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="70dp">

        <Button
            android:id="@+id/recommend_route__details_rtn_btn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:text="@string/back"/>

        <Button
            android:id="@+id/recommend_route__details_next_btn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:text="@string/add"/>

    </RelativeLayout>

</LinearLayout>
